new update on the Template